<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_swarm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="arjun@todo.todo">arjun</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  cd<depend>ros2launch</depend>
  <depend>robot_state_publisher</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>rtabmap_odom</depend>
  <depend>robot_localization</depend>
  <depend>smbus</depend>
  <depend>struct</depend>
  <depend>time</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_transformations</depend>
  <depend>python3-python-math</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
